# MetaMap

./: .replit  LICENSE  app.py  metadata_20231106112808.ttl  metadata_20231106215952.ttl  metadata_20231112183522.ttl  metadata_20231112231319.ttl  metadata_20231112231343.ttl  metadata_20231112231927.ttl  metadata_20231112231958.ttl  metadata_20231113020823.ttl  metadata_20231211084735.ttl  metadata_20240503052200_1131s.ttl  metadata_named_graph_20240924015206_29s.ttl  metadata_named_graph_20241007171235_57s.ttl  pyproject.toml  replit.nix
static/: add_metadata.html  annotate.html  ontology_alignment.ttl  research_data_integration_mapping_v1.ttl  scenario.html  task_explanation.html  upload.html
templates/: Ack.html  home.html  success.html
upload/: interlink_mapping.ttl  interlinking.rq  interlinking.rq_rdf_star.ttl  mapping.rml-10.ttl  mapping.rml-9.ttl  metadata_named_graph_20241009164820_6s.ttl  metadata_named_graph_20241009174434_6s.ttl  metadata_named_graph_20241009212911_8s.ttl  metadata_named_graph_20241009213151_11s.ttl  ontology_alignment.ttl_rdf_star.ttl  uplift_mapping (1).ttl  uplift_mapping.ttl_rdf_star.trig  uplift_mapping.ttl_rdf_star.ttl
